cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 139 conflicts: 9 shift/reduce
State 151 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'
    6      | error ';'

    7 optional_feature_list: %empty
    8                      | feature
    9                      | optional_feature_list feature
   10                      | optional_feature_list error ';'

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   13        | OBJECTID ':' TYPEID ';'
   14        | OBJECTID ':' TYPEID ASSIGN expr ';'

   15 formal_list: formal
   16            | formal ',' formal_list

   17 formal: OBJECTID ':' TYPEID

   18 expr: OBJECTID ASSIGN expr
   19     | expr '.' OBJECTID '(' ')'
   20     | expr '.' OBJECTID '(' expr_list ')'
   21     | expr '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | OBJECTID '(' ')'
   24     | OBJECTID '(' expr_list ')'
   25     | IF expr THEN expr ELSE expr FI
   26     | WHILE expr LOOP expr POOL
   27     | '{' expr_block_list '}'
   28     | LET let_body
   29     | CASE expr OF case_list ESAC
   30     | NEW TYPEID
   31     | ISVOID expr
   32     | expr '+' expr
   33     | expr '-' expr
   34     | expr '*' expr
   35     | expr '/' expr
   36     | '~' expr
   37     | expr '<' expr
   38     | expr LE expr
   39     | expr '=' expr
   40     | NOT expr
   41     | '(' expr ')'
   42     | OBJECTID
   43     | INT_CONST
   44     | STR_CONST
   45     | BOOL_CONST
   46     | error

   47 expr_list: expr
   48          | expr_list ',' expr

   49 expr_block_list: expr ';'
   50                | expr_block_list expr ';'
   51                | expr_block_list error

   52 case_list: case
   53          | case_list case

   54 case: OBJECTID ':' TYPEID DARROW expr ';'

   55 let_body: OBJECTID ':' TYPEID IN expr
   56         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   57         | OBJECTID ':' TYPEID ',' let_body
   58         | OBJECTID ':' TYPEID ASSIGN expr ',' let_body
   59         | error let_body


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 12 19 20 21 22 23 24 41
    ')' (41) 11 12 19 20 21 22 23 24 41
    '*' (42) 34
    '+' (43) 32
    ',' (44) 16 48 57 58
    '-' (45) 33
    '.' (46) 19 20 21 22
    '/' (47) 35
    ':' (58) 11 12 13 14 17 54 55 56 57 58
    ';' (59) 4 5 6 10 11 12 13 14 49 50 54
    '<' (60) 37
    '=' (61) 39
    '@' (64) 21 22
    '{' (123) 4 5 11 12 27
    '}' (125) 4 5 11 12 27
    '~' (126) 36
    error (256) 6 10 46 51 59
    CLASS (258) 4 5
    ELSE (259) 25
    FI (260) 25
    IF (261) 25
    IN (262) 55 56
    INHERITS (263) 5
    LET (264) 28
    LOOP (265) 26
    POOL (266) 26
    THEN (267) 25
    WHILE (268) 26
    CASE (269) 29
    ESAC (270) 29
    OF (271) 29
    DARROW (272) 54
    NEW (273) 30
    ISVOID (274) 31
    STR_CONST <symbol> (275) 44
    INT_CONST <symbol> (276) 43
    BOOL_CONST <boolean> (277) 45
    TYPEID <symbol> (278) 4 5 11 12 13 14 17 21 22 30 54 55 56 57 58
    OBJECTID <symbol> (279) 11 12 13 14 17 18 19 20 21 22 23 24 42 54 55 56 57 58
    ASSIGN (280) 14 18 56 58
    NOT (281) 40
    LE (282) 38
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    optional_feature_list <features> (49)
        on left: 7 8 9 10
        on right: 4 5 9 10
    feature <feature> (50)
        on left: 11 12 13 14
        on right: 8 9
    formal_list <formals> (51)
        on left: 15 16
        on right: 12 16
    formal <formal> (52)
        on left: 17
        on right: 15 16
    expr <expression> (53)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 11 12 14 18 19 20 21 22 25 26 29 31 32 33 34 35 36 37 38 39 40 41 47 48 49 50 54 55 56 58
    expr_list <expressions> (54)
        on left: 47 48
        on right: 20 22 24 48
    expr_block_list <expressions> (55)
        on left: 49 50 51
        on right: 27 50 51
    case_list <cases> (56)
        on left: 52 53
        on right: 29 53
    case <case_> (57)
        on left: 54
        on right: 52 53
    let_body <expression> (58)
        on left: 55 56 57 58 59
        on right: 28 57 58 59


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 13

    OBJECTID  [reduce using rule 7 (optional_feature_list)]
    $default  reduce using rule 7 (optional_feature_list)

    optional_feature_list  go to state 14
    feature                go to state 15


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 16


State 13

   11 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   13        | OBJECTID . ':' TYPEID ';'
   14        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


State 14

    4 class: CLASS TYPEID '{' optional_feature_list . '}' ';'
    9 optional_feature_list: optional_feature_list . feature
   10                      | optional_feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 20

    feature  go to state 21


State 15

    8 optional_feature_list: feature .

    $default  reduce using rule 8 (optional_feature_list)


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 13

    OBJECTID  [reduce using rule 7 (optional_feature_list)]
    $default  reduce using rule 7 (optional_feature_list)

    optional_feature_list  go to state 22
    feature                go to state 15


State 17

   11 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 23
    ')'       shift, and go to state 24

    formal_list  go to state 25
    formal       go to state 26


State 18

   13 feature: OBJECTID ':' . TYPEID ';'
   14        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 27


State 19

   10 optional_feature_list: optional_feature_list error . ';'

    ';'  shift, and go to state 28


State 20

    4 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 29


State 21

    9 optional_feature_list: optional_feature_list feature .

    $default  reduce using rule 9 (optional_feature_list)


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'
    9 optional_feature_list: optional_feature_list . feature
   10                      | optional_feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 30

    feature  go to state 21


State 23

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 24

   11 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 32


State 25

   12 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 33


State 26

   15 formal_list: formal .
   16            | formal . ',' formal_list

    ','  shift, and go to state 34

    $default  reduce using rule 15 (formal_list)


State 27

   13 feature: OBJECTID ':' TYPEID . ';'
   14        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 28

   10 optional_feature_list: optional_feature_list error ';' .

    $default  reduce using rule 10 (optional_feature_list)


State 29

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 37


State 31

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 32

   11 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 39


State 33

   12 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 40


State 34

   16 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 23

    formal_list  go to state 41
    formal       go to state 26


State 35

   14 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 57


State 36

   13 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 13 (feature)


State 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 38

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 39

   11 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 58


State 40

   12 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 59


State 41

   16 formal_list: formal ',' formal_list .

    $default  reduce using rule 16 (formal_list)


State 42

   46 expr: error .

    $default  reduce using rule 46 (expr)


State 43

   25 expr: IF . expr THEN expr ELSE expr FI

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 60


State 44

   28 expr: LET . let_body

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    let_body  go to state 63


State 45

   26 expr: WHILE . expr LOOP expr POOL

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 64


State 46

   29 expr: CASE . expr OF case_list ESAC

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 65


State 47

   30 expr: NEW . TYPEID

    TYPEID  shift, and go to state 66


State 48

   31 expr: ISVOID . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 67


State 49

   44 expr: STR_CONST .

    $default  reduce using rule 44 (expr)


State 50

   43 expr: INT_CONST .

    $default  reduce using rule 43 (expr)


State 51

   45 expr: BOOL_CONST .

    $default  reduce using rule 45 (expr)


State 52

   18 expr: OBJECTID . ASSIGN expr
   23     | OBJECTID . '(' ')'
   24     | OBJECTID . '(' expr_list ')'
   42     | OBJECTID .

    ASSIGN  shift, and go to state 68
    '('     shift, and go to state 69

    $default  reduce using rule 42 (expr)


State 53

   40 expr: NOT . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 70


State 54

   36 expr: '~' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 71


State 55

   27 expr: '{' . expr_block_list '}'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr             go to state 72
    expr_block_list  go to state 73


State 56

   41 expr: '(' . expr ')'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 74


State 57

   14 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83
    ';'  shift, and go to state 84


State 58

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 85


State 59

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 86


State 60

   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   25     | IF expr . THEN expr ELSE expr FI
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    THEN  shift, and go to state 87
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


State 61

   59 let_body: error . let_body

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    let_body  go to state 88


State 62

   55 let_body: OBJECTID . ':' TYPEID IN expr
   56         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   57         | OBJECTID . ':' TYPEID ',' let_body
   58         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_body

    ':'  shift, and go to state 89


State 63

   28 expr: LET let_body .

    $default  reduce using rule 28 (expr)


State 64

   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   26     | WHILE expr . LOOP expr POOL
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    LOOP  shift, and go to state 90
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


State 65

   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   29     | CASE expr . OF case_list ESAC
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    OF   shift, and go to state 91
    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83


State 66

   30 expr: NEW TYPEID .

    $default  reduce using rule 30 (expr)


State 67

   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | ISVOID expr .
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 31 (expr)

    Conflict between rule 31 and token LE resolved as reduce (LE < ISVOID).
    Conflict between rule 31 and token '<' resolved as reduce ('<' < ISVOID).
    Conflict between rule 31 and token '=' resolved as reduce ('=' < ISVOID).
    Conflict between rule 31 and token '+' resolved as reduce ('+' < ISVOID).
    Conflict between rule 31 and token '-' resolved as reduce ('-' < ISVOID).
    Conflict between rule 31 and token '*' resolved as reduce ('*' < ISVOID).
    Conflict between rule 31 and token '/' resolved as reduce ('/' < ISVOID).
    Conflict between rule 31 and token '@' resolved as shift (ISVOID < '@').
    Conflict between rule 31 and token '.' resolved as shift (ISVOID < '.').


State 68

   18 expr: OBJECTID ASSIGN . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 92


State 69

   23 expr: OBJECTID '(' . ')'
   24     | OBJECTID '(' . expr_list ')'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56
    ')'         shift, and go to state 93

    expr       go to state 94
    expr_list  go to state 95


State 70

   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   40     | NOT expr .

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 40 (expr)

    Conflict between rule 40 and token LE resolved as shift (NOT < LE).
    Conflict between rule 40 and token '<' resolved as shift (NOT < '<').
    Conflict between rule 40 and token '=' resolved as shift (NOT < '=').
    Conflict between rule 40 and token '+' resolved as shift (NOT < '+').
    Conflict between rule 40 and token '-' resolved as shift (NOT < '-').
    Conflict between rule 40 and token '*' resolved as shift (NOT < '*').
    Conflict between rule 40 and token '/' resolved as shift (NOT < '/').
    Conflict between rule 40 and token '@' resolved as shift (NOT < '@').
    Conflict between rule 40 and token '.' resolved as shift (NOT < '.').


State 71

   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   36     | '~' expr .
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 36 (expr)

    Conflict between rule 36 and token LE resolved as reduce (LE < '~').
    Conflict between rule 36 and token '<' resolved as reduce ('<' < '~').
    Conflict between rule 36 and token '=' resolved as reduce ('=' < '~').
    Conflict between rule 36 and token '+' resolved as reduce ('+' < '~').
    Conflict between rule 36 and token '-' resolved as reduce ('-' < '~').
    Conflict between rule 36 and token '*' resolved as reduce ('*' < '~').
    Conflict between rule 36 and token '/' resolved as reduce ('/' < '~').
    Conflict between rule 36 and token '@' resolved as shift ('~' < '@').
    Conflict between rule 36 and token '.' resolved as shift ('~' < '.').


State 72

   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   49 expr_block_list: expr . ';'

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83
    ';'  shift, and go to state 96


State 73

   27 expr: '{' expr_block_list . '}'
   50 expr_block_list: expr_block_list . expr ';'
   51                | expr_block_list . error

    error       shift, and go to state 97
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '}'         shift, and go to state 98
    '('         shift, and go to state 56

    expr  go to state 99


State 74

   19 expr: expr . '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   41     | '(' expr . ')'

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83
    ')'  shift, and go to state 100


State 75

   38 expr: expr LE . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 101


State 76

   37 expr: expr '<' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 102


State 77

   39 expr: expr '=' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 103


State 78

   32 expr: expr '+' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56
